Removed Helvetica from default fonts because of bad substitution causing layout issues

--- a/grails-app/assets/stylesheets/dialog-local/dialog.css
+++ b/grails-app/assets/stylesheets/dialog-local/dialog.css
@@ -109,3 +109,13 @@ div.tab-pane {
 h1.dialoglist-title {
     font-size: 24px; /* h3 font-size */
 }
+body {
+  font-family: Arial, sans-serif !important;   
+}
+.tooltip {
+  font-family: Arial, sans-serif !important;
+}
+
+.popover {
+  font-family: Arial, sans-serif !important;
+}
